# Claude-index-search-android-studio

./: .gitignore  Cargo.toml  README.md  knowledge-graph-research.md  mcp_server.sh  plugin.json  post-ya-tool.md  pyproject.toml  requirements.txt  server.py
.catalyst/: settings.local.json
.claude-plugin/: marketplace.json  plugin.json
.claude/plans/: perl-support.md  refactor-3.6.1.md  wsdl-proto-cpp-support.md
.github/workflows/: release.yml
commands/: initialize-android.md  initialize-ios.md
db/: database.py  schema.py
docs/knowledge-compression/: MASTER_PLAN.md  README.md
indexer/: __init__.py  file_indexer.py  module_indexer.py  symbol_indexer.py
legacy-python-mcp/: README.md  plugin.json  pyproject.toml  requirements.txt
legacy-python-mcp/src/kotlin_index/: __init__.py  cli.py  server.py
legacy-python-mcp/src/kotlin_index/db/: __init__.py  database.py
legacy-python-mcp/src/kotlin_index/indexer/: file_indexer.py  module_indexer.py  symbol_indexer.py
mobile-tools/: COMPARISON.md  Cargo.toml
mobile-tools/plugin/.claude-plugin/: plugin.json
mobile-tools/src/: android.rs  aurora.rs  desktop.rs  ios.rs  lib.rs  main.rs  platform.rs  screenshot.rs
plugin/.claude-plugin/: plugin.json
plugin/commands/: initialize-android.md  initialize-csharp.md  initialize-ios.md  initialize-ruby.md  initialize-rust.md  initialize-web.md
plugin/skills/ast-index/: SKILL.md
skills/: kotlin-index.md
skills/ast-index/: SKILL.md
skills/ast-index/references/: android-commands.md  cpp-commands.md  go-commands.md  perl-commands.md  proto-commands.md  python-commands.md  wsdl-commands.md
src/: db.rs  indexer.rs  main.rs
src/commands/: files.rs  grep.rs  index.rs  management.rs  mod.rs  modules.rs
src/kotlin_index/: __init__.py  cli.py
src/parsers/: cpp.rs  csharp.rs  dart.rs  go.rs  kotlin.rs  mod.rs  objc.rs  perl.rs  proto.rs  python.rs  ruby.rs  rust.rs  swift.rs  typescript.rs  wsdl.rs
src/parsers/treesitter/: bsl.rs  mod.rs  ruby.rs  typescript.rs
src/parsers/treesitter/queries/: bsl.scm  typescript.scm
tree-sitter-bsl/: grammar.js
tree-sitter-bsl/src/: grammar.json  parser.c
