[package]
name = "mobile-tools"
version = "2.8.0"
edition = "2021"
description = "Fast native CLI for mobile device automation (Android/iOS/Aurora/Desktop)"
authors = ["defendend", "Alex Gladkov"]
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.25"
imageproc = "0.25"
ab_glyph = "0.2"
base64 = "0.22"
colored = "2.0"
regex = "1.10"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
